# nic-autoswitch

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  INSTRUCTION.md  README.md  config.example.toml  config.toml  docker-compose.yml
.github/workflows/: ci.yml
benches/: matcher_bench.rs  router_bench.rs
docs/: design.md  integration-test-plan.md
rules/: README.md  async-code.md  branching.md  code-review.md  dependencies.md  documentation.md  error-handling.md  logging.md  naming.md  performance.md  principles.md  security.md  tdd.md  testing.md  tooling.md  versioning.md
scripts/: container-config.toml  deploy-local.sh  setup-netns.sh
src/: error.rs  lib.rs  main.rs
src/cli/: client.rs  commands.rs  main.rs
src/config/: loader.rs  mod.rs  schema.rs  watcher.rs
src/daemon/: control.rs  mod.rs  service.rs  signals.rs  systemd.rs
src/engine/: dispatcher.rs  executor.rs  matcher.rs  mod.rs
src/monitor/: events.rs  mod.rs  netlink.rs  networkmanager.rs  state.rs
src/router/: dns.rs  manager.rs  mod.rs  rules.rs
systemd/: nic-autoswitch.service
tests/: integration_cli.rs  integration_config.rs  integration_daemon.rs  integration_engine.rs  integration_route.rs
tests/common/: mock_network.rs  mod.rs
tests/fixtures/: complex_config.toml  container_config.toml  ipv6_config.toml  valid_config.toml
tests/fixtures/invalid/: bad_toml.toml  duplicate_rule_name.toml  empty_interfaces.toml  invalid_table_id.toml
